# devops_hobbies

./: .dockerignore  docker-compose.yaml  pyproject.toml
.github/workflows/: build_image.yml  build_image_and_deploy.yml  tests.yml
app/: __init__.py
argocd/: Readme.md
argocd/argo_server_patch/: argocd-cmd-params-cm.yaml
argocd/ha_install/: deploy.yaml  install.yaml
argocd/install/: argo-ingress.yaml  deploy.yaml
argocd/nginx_application/: app-directory.yaml  app_from_scratch.yaml
argocd/nginx_application/terraform/: main.tf  terraform.tfstate  terraform.tfstate.backup  terraform.tfvars  variables.tf
argocd/projects/: project.yaml
argocd/sync_policies/: auto-sync.yaml
deploy/: README.md  argocd-app.yaml  ingress-preview.yaml  ingress.yaml  kustomization.yaml  rollout.yaml  service-active.yaml  service-preview.yaml
