[tool.poetry]
name = "devops_hobbies"
version = "0.0.0"
description = ""
authors = ["Mikalai <mikalai@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]


[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = "^0.27.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"